// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiDatePickerRange disabled is rendered 1`] = `
<div
  class="euiDatePickerRange euiDatePickerRange--isDisabled"
>
  <span
    class="euiDatePicker euiDatePicker--shadow"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          class="euiPopover emotion-euiPopover"
        >
          <div
            class="euiPopover__anchor css-zih94u-render"
          >
            <div
              class="react-datepicker__input-container"
            >
              <input
                aria-label="Press the down key to open a popover containing a calendar."
                class="euiDatePicker euiFieldText euiFieldText--withIcon euiDatePickerRange__start"
                disabled=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <span
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="calendar"
            />
          </span>
        </div>
      </div>
    </div>
  </span>
  <span
    class="euiDatePickerRange__delimeter"
  >
    <span
      color="subdued"
      data-euiicon-type="sortRight"
    />
  </span>
  <span
    class="euiDatePicker euiDatePicker--shadow"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          class="euiPopover emotion-euiPopover"
        >
          <div
            class="euiPopover__anchor css-zih94u-render"
          >
            <div
              class="react-datepicker__input-container"
            >
              <input
                aria-label="Press the down key to open a popover containing a calendar."
                class="euiDatePicker euiFieldText euiDatePickerRange__end"
                disabled=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`EuiDatePickerRange is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiDatePickerRange testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="euiDatePicker euiDatePicker--shadow"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          class="euiPopover emotion-euiPopover"
        >
          <div
            class="euiPopover__anchor css-zih94u-render"
          >
            <div
              class="react-datepicker__input-container"
            >
              <input
                aria-label="Press the down key to open a popover containing a calendar."
                class="euiDatePicker euiFieldText euiFieldText--withIcon euiDatePickerRange__start"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <span
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="calendar"
            />
          </span>
        </div>
      </div>
    </div>
  </span>
  <span
    class="euiDatePickerRange__delimeter"
  >
    <span
      color="subdued"
      data-euiicon-type="sortRight"
    />
  </span>
  <span
    class="euiDatePicker euiDatePicker--shadow"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          class="euiPopover emotion-euiPopover"
        >
          <div
            class="euiPopover__anchor css-zih94u-render"
          >
            <div
              class="react-datepicker__input-container"
            >
              <input
                aria-label="Press the down key to open a popover containing a calendar."
                class="euiDatePicker euiFieldText euiDatePickerRange__end"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`EuiDatePickerRange isInvalid is rendered 1`] = `
<div
  class="euiDatePickerRange euiDatePickerRange--isInvalid"
>
  <span
    class="euiDatePicker euiDatePicker--shadow"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          class="euiPopover emotion-euiPopover"
        >
          <div
            class="euiPopover__anchor css-zih94u-render"
          >
            <div
              class="react-datepicker__input-container"
            >
              <input
                aria-label="Press the down key to open a popover containing a calendar."
                class="euiDatePicker euiFieldText euiFieldText--withIcon euiFieldText-isInvalid euiDatePickerRange__start"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <span
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="calendar"
            />
          </span>
        </div>
      </div>
    </div>
  </span>
  <span
    class="euiDatePickerRange__delimeter"
  >
    <span
      color="danger"
      data-euiicon-type="warning"
    />
  </span>
  <span
    class="euiDatePicker euiDatePicker--shadow"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          class="euiPopover emotion-euiPopover"
        >
          <div
            class="euiPopover__anchor css-zih94u-render"
          >
            <div
              class="react-datepicker__input-container"
            >
              <input
                aria-label="Press the down key to open a popover containing a calendar."
                class="euiDatePicker euiFieldText euiFieldText-isInvalid euiDatePickerRange__end"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`EuiDatePickerRange readOnly is rendered 1`] = `
<div
  class="euiDatePickerRange euiDatePickerRange--readOnly"
>
  <span
    class="euiDatePicker euiDatePicker--shadow"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          class="euiPopover emotion-euiPopover"
        >
          <div
            class="euiPopover__anchor css-zih94u-render"
          >
            <div
              class="react-datepicker__input-container"
            >
              <input
                aria-label="Press the down key to open a popover containing a calendar."
                class="euiDatePicker euiFieldText euiFieldText--withIcon euiDatePickerRange__start"
                readonly=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <span
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="calendar"
            />
          </span>
        </div>
      </div>
    </div>
  </span>
  <span
    class="euiDatePickerRange__delimeter"
  >
    <span
      color="subdued"
      data-euiicon-type="sortRight"
    />
  </span>
  <span
    class="euiDatePicker euiDatePicker--shadow"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          class="euiPopover emotion-euiPopover"
        >
          <div
            class="euiPopover__anchor css-zih94u-render"
          >
            <div
              class="react-datepicker__input-container"
            >
              <input
                aria-label="Press the down key to open a popover containing a calendar."
                class="euiDatePicker euiFieldText euiDatePickerRange__end"
                readonly=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`EuiDatePickerRange uses individual EuiDatePicker props 1`] = `
<div
  aria-label="aria-label"
  class="euiDatePickerRange testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="euiDatePicker euiDatePicker--shadow"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          class="euiPopover emotion-euiPopover"
        >
          <div
            class="euiPopover__anchor css-zih94u-render"
          >
            <div
              class="react-datepicker__input-container"
            >
              <input
                aria-label="Press the down key to open a popover containing a calendar."
                class="euiDatePicker euiFieldText euiFieldText--withIcon euiDatePickerRange__start hello"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <span
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="calendar"
            />
          </span>
        </div>
      </div>
    </div>
  </span>
  <span
    class="euiDatePickerRange__delimeter"
  >
    <span
      color="subdued"
      data-euiicon-type="sortRight"
    />
  </span>
  <span
    class="euiDatePicker euiDatePicker--shadow"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          class="euiPopover emotion-euiPopover"
        >
          <div
            class="euiPopover__anchor css-zih94u-render"
          >
            <div
              class="react-datepicker__input-container"
            >
              <input
                aria-label="Press the down key to open a popover containing a calendar."
                class="euiDatePicker euiFieldText euiDatePickerRange__end world"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;
